--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,8 @@ body {
   opacity: 0;
 
   text-align: center;
+
+  transition: all 250ms linear;
 }
 
 .chart__count::after {
@@ -148,4 +150,12 @@ body {
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
   border-top: 10px solid #000;
+}
+
+.chart__item:hover .chart__count,
+.chart__item:active .chart__count,
+.chart__item:focus .chart__count{
+  opacity: 100;
+  top: -7em;
+
 }
